--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
         </p>
     </header>
 
-    <section class="content historia"></section>
+    <section class="content historia">
+        <h2 class="title">Historia</h2>
+        
+    </section>
 
 </body>
 
