--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JJK Wiki Fandom</title>
+    <title>Jujutsu Kaisen Wiki Fandom</title>
     <link rel="stylesheet" href="../css/menu.css">
     <link rel="stylesheet" href="../css/inicio.css">
     <link rel="stylesheet" href="../css/footer.css">
