De vuelta a la normalidad

--- a/pages/index.html
+++ b/pages/index.html
@@ -48,7 +48,7 @@
 
         <section class="content historia">
             <br><br>
-            <h2 class="title" id="comienzo">Pechugas</h2>
+            <h2 class="title" id="comienzo">Historia</h2>
 
             <nav id="nav-bar">
                 <ul class="nav-list">
